# MLOps_Pr-diction_Energie

./: .coverage  .coveragerc  .gitattributes  Dockerfile  Hably_Firdaous_01_notebook_Preparation_donnees_112025.ipynb  Hably_Firdaous_02_notebook_Feature_Engineering_112025.ipynb  Hably_Firdaous_03_notebook_Modelisation_112025.ipynb  Hably_Firdaous_04_notebook_Interpretation_Avancee_112025.ipynb  Hably_Firdaous_sql_112025.sql  README.md  X.csv  create_db.py  data_clean.csv  pyproject.toml  requirements.txt  y.csv
.github/workflows/: ci_cd.yml
app/: database.py  main.py  preprocessing.py  test_api.py  trained_model.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_database_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_preprocessing_py.html  z_5f5a17c013354698_test_api_py.html  z_5f5a17c013354698_trained_model_py.html
models/: building_energy_pipeline.joblib
